<resources>
    <string name="app_name">NavTabs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="latest">Latest</string>
    <string name="events">Events</string>
    <string name="social">Social</string>
    <string name="directory">Directory</string>
    <string name="facilities">Facilities</string>
    <string name="admission">Admission</string>
    <string name="courses">Courses</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="map">Map</string>
    <string name="website">Website</string>
</resources>
