<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/latest" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/social" />
        <item
            android:id="@+id/nav_directory"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/directory" />
        <item
            android:id="@+id/nav_facilities"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/facilities" />
        <item
            android:id="@+id/nav_admission"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/admission" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/website" />
    </group>

</menu>
